exports[`<BookCounter /> renders without exploding 1`] = `
<span
  className="bookshelf-counter">
  10
</span>
`;

exports[`<BookCounter /> should show "s of t" 1`] = `
<span
  className="bookshelf-counter">
  5 of 10
</span>
`;

exports[`<BookCounter /> should show total 1`] = `
<span
  className="bookshelf-counter">
  10
</span>
`;
